bug 1304: Some minor corrections to keep sonar happy and swapped the receiving channels to match the HWinfo
git-svn-id: file:///tmp/svnroot_only_rec/internal/rec-project/rec/trunk@5946 8c4c7310-a39f-45c4-bd0d-b10b2e5d99a4